# cmd/main/main.go
@@ -5,6 +5,7 @@ import (
 	"todo/cmd/main/controller"
 	_ "todo/cmd/main/docs"
 	"todo/db"
+
 	"github.com/gin-gonic/gin"
 	_ "github.com/go-sql-driver/mysql"
 	swaggerFiles "github.com/swaggo/files"
@@ -17,7 +18,6 @@ import (
 // @host localhost:8080
 // @BasePath /
 func main() {
-
 
 	fmt.Println("start of application")
 	server := gin.Default()
@@ -45,13 +45,11 @@ func main() {
 	})
 
 	// Update Todo
-	server.PUT("todo/:id",  func(ctx *gin.Context) {
+	server.PUT("todo/:id", func(ctx *gin.Context) {
 		idString := ctx.Param("id")
 		controller.UpdateTodo(idString, ctx, database())
 	})
 
-
 	server.Run(":8080")
-	
 
 }
